Adding ARM64 for raspberry pi support

--- a/debian/kafka/Dockerfile
+++ b/debian/kafka/Dockerfile
@@ -13,7 +13,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-FROM confluentinc/cp-base
+FROM hugomf/cp-base-arm64
 
 ARG COMMIT_ID=unknown
 LABEL io.confluent.docker.git.id=$COMMIT_ID
@@ -33,6 +33,8 @@ ENV COMPONENT=kafka
 
 # primary
 EXPOSE 9092
+
+RUN echo "${SCALA_VERSION} ${CONFLUENT_VERSION}"
 
 RUN echo "===> installing ${COMPONENT}..." \
     && apt-get update && apt-get install -y confluent-kafka-${SCALA_VERSION}=${CONFLUENT_VERSION}${CONFLUENT_PLATFORM_LABEL}-${CONFLUENT_DEB_VERSION} \
