--- a/debian/base/Dockerfile
+++ b/debian/base/Dockerfile
@@ -13,7 +13,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-FROM debian:jessie
+FROM arm64v8/ubuntu:latest
 
 ARG COMMIT_ID=unknown
 LABEL io.confluent.docker.git.id=$COMMIT_ID
@@ -22,7 +22,7 @@ LABEL io.confluent.docker.build.number=$BUILD_NUMBER
 
 ARG CONFLUENT_PACKAGES_REPO=$CONFLUENT_PACKAGES_REPO
 
-ARG ALLOW_UNSIGNED=false
+ARG ALLOW_UNSIGNED=true
 #Set an env var so that it's available in derived images
 ENV ALLOW_UNSIGNED=$ALLOW_UNSIGNED
 
@@ -30,13 +30,13 @@ MAINTAINER partner-support@confluent.io
 LABEL io.confluent.docker=true
 
 # Python
-ENV PYTHON_VERSION="2.7.9-1"
+ENV PYTHON_VERSION="2.7.13-2"
 ENV PYTHON_PIP_VERSION="8.1.2"
 
 # Confluent
 ENV SCALA_VERSION="2.12"
 
-ARG KAFKA_VERSION=$KAFKA_VERSION
+ARG KAFKA_VERSION=5.3.3
 ARG CONFLUENT_MAJOR_VERSION=$CONFLUENT_MAJOR_VERSION
 ARG CONFLUENT_MINOR_VERSION=$CONFLUENT_MINOR_VERSION
 ARG CONFLUENT_PATCH_VERSION=$CONFLUENT_PATCH_VERSION
@@ -45,9 +45,6 @@ ARG CONFLUENT_MVN_LABEL=$CONFLUENT_MVN_LABEL
 ARG CONFLUENT_PLATFORM_LABEL=$CONFLUENT_PLATFORM_LABEL
 
 ENV KAFKA_VERSION=$KAFKA_VERSION
-ENV CONFLUENT_MAJOR_VERSION=$CONFLUENT_MAJOR_VERSION
-ENV CONFLUENT_MINOR_VERSION=$CONFLUENT_MINOR_VERSION
-ENV CONFLUENT_PATCH_VERSION=$CONFLUENT_PATCH_VERSION
 
 ENV CONFLUENT_MVN_LABEL=$CONFLUENT_MVN_LABEL
 ENV CONFLUENT_PLATFORM_LABEL=$CONFLUENT_PLATFORM_LABEL
@@ -62,37 +59,30 @@ ENV ZULU_OPENJDK_VERSION="8=8.38.0.13"
 # base image that supports it
 ENV LANG="C.UTF-8"
 
-RUN echo "===> Updating debian ....." \
+RUN echo "===> :wUpdating debian ....." \
     # TODO debian jessie has been deprecated and is only ex
-    && echo "deb http://archive.debian.org/debian/ jessie main" > /etc/apt/sources.list \
-    && echo "deb http://security.debian.org jessie/updates main" >> /etc/apt/sources.list \
     && apt-get -qq update \
-    \
     && echo "===> Installing curl wget netcat python...." \
     && DEBIAN_FRONTEND=noninteractive apt-get install -y \
                 apt-transport-https \
                 curl \
-                gnupg-curl \
+                gnupg1-curl \
+                gnupg2 \
                 git \
                 wget \
                 netcat \
-                python=${PYTHON_VERSION} \
-    && echo "===> Installing python packages ..."  \
-    && curl -fSL "https://bootstrap.pypa.io/get-pip.py" | python \
-    && pip install --no-cache-dir --upgrade pip==${PYTHON_PIP_VERSION} \
-    && pip install --no-cache-dir git+https://github.com/confluentinc/confluent-docker-utils@v0.0.20 \
+                python3.6 \
+                python3-pip \
+    && pip install --no-cache-dir git+https://github.com/confluentinc/confluent-docker-utils@v0.0.46 \
     && apt remove --purge -y git \
-    && echo "Installing Zulu OpenJDK ${ZULU_OPENJDK_VERSION}" \
-    && apt-key adv --keyserver hkps://keyserver.ubuntu.com:443 --recv-keys 0x27BC0C8CB3D81623F59BDADCB1998361219BD9C9 \
-    && echo "deb http://repos.azulsystems.com/debian stable  main" >> /etc/apt/sources.list.d/zulu.list \
+    && echo "Installing OpenJDK ${ZULU_OPENJDK_VERSION}" \
     && apt-get -qq update \
-    && apt-get -y install zulu-${ZULU_OPENJDK_VERSION} \
+    && DEBIAN_FRONTEND=noninteractive apt-get -y install openjdk-8-jdk-headless \
     && echo "===> Installing Kerberos Patch ..." \
     && DEBIAN_FRONTEND=noninteractive apt-get -y install krb5-user \
-    && rm -rf /var/lib/apt/lists/* \
+    && rm -rf /var/lib/apt/lists/*  \
     && echo "===> Adding confluent repository...${CONFLUENT_PACKAGES_REPO}/deb/${CONFLUENT_MAJOR_VERSION}.${CONFLUENT_MINOR_VERSION}" \
     && if [ "x$ALLOW_UNSIGNED" = "xtrue" ]; then echo "APT::Get::AllowUnauthenticated \"true\";" > /etc/apt/apt.conf.d/allow_unauthenticated; else curl -L ${CONFLUENT_PACKAGES_REPO}/deb/${CONFLUENT_MAJOR_VERSION}.${CONFLUENT_MINOR_VERSION}/archive.key | apt-key add - ; fi \
     && echo "deb [arch=amd64] ${CONFLUENT_PACKAGES_REPO}/deb/${CONFLUENT_MAJOR_VERSION}.${CONFLUENT_MINOR_VERSION} stable main" >> /etc/apt/sources.list
-
 ENV CUB_CLASSPATH=/etc/confluent/docker/docker-utils.jar
 COPY include/etc/confluent/docker /etc/confluent/docker
