--- a/debian/schema-registry/include/etc/confluent/docker/admin.properties.template
+++ b/debian/schema-registry/include/etc/confluent/docker/admin.properties.template
@@ -1,4 +1,4 @@
 {% set security_props = env_to_props('SCHEMA_REGISTRY_KAFKASTORE_', '') -%}
-{% for name, value in security_props.iteritems() -%}
+{% for name, value in security_props.items() -%}
 {{name}}={{value}}
 {% endfor -%}
