--- a/debian/schema-registry/include/etc/confluent/docker/log4j.properties.template
+++ b/debian/schema-registry/include/etc/confluent/docker/log4j.properties.template
@@ -7,7 +7,7 @@ log4j.appender.stdout.layout.ConversionPattern=[%d] %p %m (%c)%n
 
 {% if env['SCHEMA_REGISTRY_LOG4J_LOGGERS'] %}
 {% set loggers = parse_log4j_loggers(env['SCHEMA_REGISTRY_LOG4J_LOGGERS']) %}
-{% for logger,loglevel in loggers.iteritems() %}
+{% for logger,loglevel in loggers.items() %}
 log4j.logger.{{logger}}={{loglevel}}, stdout
 {% endfor %}
 {% endif %}
