--- a/debian/schema-registry/include/etc/confluent/docker/schema-registry.properties.template
+++ b/debian/schema-registry/include/etc/confluent/docker/schema-registry.properties.template
@@ -1,4 +1,4 @@
 {% set sr_props = env_to_props('SCHEMA_REGISTRY_', '') -%}
-{% for name, value in sr_props.iteritems() -%}
+{% for name, value in sr_props.items() -%}
 {{name}}={{value}}
 {% endfor -%}
