--- a/debian/server/include/etc/confluent/docker/log4j.properties.template
+++ b/debian/server/include/etc/confluent/docker/log4j.properties.template
@@ -21,6 +21,6 @@ log4j.appender.stdout.layout.ConversionPattern=[%d] %p %m (%c)%n
 {% set loggers = parse_log4j_loggers(env['KAFKA_LOG4J_LOGGERS'], loggers) %}
 {% endif %}
 
-{% for logger,loglevel in loggers.iteritems() %}
+{% for logger,loglevel in loggers.items() %}
 log4j.logger.{{logger}}={{loglevel}}
 {% endfor %}
